Fixed z-index issue. REOL-167

--- a/sites/all/themes/brin/sass/_article.scss
+++ b/sites/all/themes/brin/sass/_article.scss
@@ -71,7 +71,6 @@
       top: 33%;
       margin-top: -1em;
       right: 0;
-      z-index: 5;
       height: 0;
       width: 0;
     }
